# Lab2

./: ВИДЫ СОРТИРОВКИ.docx
App17/: main.cpp
App17/headers/: App17.h
App17/sources/: App17.cpp
YandexProject/: CMakeLists.txt  main.cpp  main.h
YandexProject 2/: main.cpp
YandexProject 2/src/sources/: YaScheduleApp.cpp
Виды сортировки/: Cifri.cpp  Podschet.cpp  Puzir.cpp  Vibor.cpp  Vstavka.cpp
